k8s/music-assistant/resources/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: service
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.50.10
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/component: web
  ports:
    - name: web
      port: 8095
      targetPort: web
    - name: stream
      port: 8097
      targetPort: stream
